vbnc/vbnc/tests/Errors/30444.vb
Public Class Test

    Public WriteOnly Property MultipleSets As String
        Set
        End Set
				Set
        End Set
    End Property

End Class
